--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ex</title>
-	<link href="styleqw.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 	<script type="text/javascript">
 	function add() {
         var trArray = table.getElementsByTagName('tr');
